--- a/TodoListJX/src/main/resources/appli/accueil/AccueilView.fxml
+++ b/TodoListJX/src/main/resources/appli/accueil/AccueilView.fxml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="appli.accueil.PageAccueilControlleur">
    <children>
-      <Label layoutX="244.0" layoutY="214.0" text="Hello" />
+      <Label layoutX="14.0" layoutY="14.0" text="Bienvenue !">
+         <font>
+            <Font size="32.0" />
+         </font></Label>
+      <TableView fx:id="tableauListe" layoutX="201.0" layoutY="54.0" prefHeight="346.0" prefWidth="399.0" />
+      <Label layoutX="201.0" layoutY="29.0" text="Enssemble des listes créées :" />
+      <Button fx:id="deconnexion" layoutX="44.0" layoutY="337.0" mnemonicParsing="false" onAction="#onClicDeconnexion" prefHeight="26.0" prefWidth="103.0" text="Déconnexion" />
+      <Button fx:id="type" layoutX="44.0" layoutY="294.0" mnemonicParsing="false" onAction="#OnClickType" prefHeight="26.0" prefWidth="103.0" text="Les types" />
+      <Button fx:id="ajouter" layoutX="44.0" layoutY="254.0" mnemonicParsing="false" onAction="#onClickAjouter" text="Ajouter une liste" />
    </children>
 </AnchorPane>
