--- a/TodoListJX/src/main/resources/appli/type/editerType.fxml
+++ b/TodoListJX/src/main/resources/appli/type/editerType.fxml
@@ -6,17 +6,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="246.0" prefWidth="249.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane prefHeight="288.0" prefWidth="249.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="40.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modifier la Type">
          <font>
             <Font size="24.0" />
          </font>
       </Text>
-      <TextField fx:id="nom" layoutX="50.0" layoutY="110.0" />
-      <Text layoutX="83.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nouveau nom :" />
-      <Button fx:id="modif" layoutX="93.0" layoutY="155.0" mnemonicParsing="false" onAction="#onClickModif" text="Modifier" />
-      <Button fx:id="retour" layoutX="98.0" layoutY="200.0" mnemonicParsing="false" onAction="#onClickRetour" text="Retour" />
+      <TextField fx:id="nom" layoutX="49.0" layoutY="103.0" />
+      <Text layoutX="84.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nouveau nom :" />
+      <Button fx:id="modif" layoutX="93.0" layoutY="190.0" mnemonicParsing="false" onAction="#onClickModif" text="Modifier" />
+      <Button fx:id="retour" layoutX="98.0" layoutY="223.0" mnemonicParsing="false" onAction="#onClickRetour" text="Retour" />
+      <TextField fx:id="code" layoutX="51.0" layoutY="155.0" />
+      <Text layoutX="59.0" layoutY="149.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nouveau Code Couleur :" />
    </children>
 </AnchorPane>
